--- a/ianstiglitz/index.html
+++ b/ianstiglitz/index.html
@@ -8,6 +8,12 @@
 <body>
     <header>
         <h1>Evidencias Fundamentos de desarrollo web</h1>
+        <ul>        
+            <li><a href="https://ianstiglitz.github.io/Practica1_PasatiemposTrevi-o/">Página Github.io</a></li>
+            <li><a href="https://github.com/IanStiglitz/Practica1_PasatiemposTrevi-o">Página del repositorio</a></li>
+            <li><a href="https://github.com/IanStiglitz/Practica1_PasatiemposTrevi-o/commits/master">Página de los commits</a></li>
+        </ul>
+
     </header>
     <main></main>
     <aside></aside>
