--- a/MiguelABanda/index.html
+++ b/MiguelABanda/index.html
@@ -9,7 +9,16 @@
     <header>
         <h1>Evidencias Fundamentos de Desarrollo Web</h1>
     </header>
-    <main></main>
+    <main>
+          <main>
+        <h1>Practica 1</h1>
+         <ul>
+                <li><a href="https://github.com/MiguelABanda/Pratica1_Pasatiempos_MiguelBanda">Repositorio de Github</a></li>
+                <li><a href="https://github.com/MiguelABanda/Pratica1_Pasatiempos_MiguelBanda/commits/main/">Links de los Commit</a></li>
+                <li><a href="https://miguelabanda.github.io/Pratica1_Pasatiempos_MiguelBanda/">Sitio Públicado</a></li>
+            </ul>
+    </main>
+    </main>
     <aside></aside>
     <footer></footer>
 </body>
