--- a/RdeReimer/index.html
+++ b/RdeReimer/index.html
@@ -9,7 +9,26 @@
     <header>
         <h1>Evidencias Fudamentos de desarrollo web</h1>
     </header>
-    <main></main>
+    <main style="display: grid;">
+        <h1>Practica 1</h1>
+        <p>Publicar pagina web sencilla en cuenta personal Github.
+
+Se debe realizar un solo documento html donde se integre información sobre sus pasatiempos. Utilizar las etiquetas: meta, title, header, main,footer, article, section, img y p. Aplicar estilos sencillos como color de texto, fondo y borde. Para los estilos utilizar un archivo externo css. Se necesita que realice 1 commit por cada tema que desarrolle.
+
+Yo realice un commit por:
+
+Musica (1 commit)
+Videojuegos (1 commit)
+Programacion (1 commit)
+Mtb (1 commit)
+En total serían 4 commits. Realizar cada commit al finalizar cada tema.
+
+Fecha commits: 13 al 15 de Agosto.</p>
+        <a href="https://github.com/rdereimer/misgustos">Link Repositorio</a>
+        <a href=" https://rdereimer.github.io/misGustos/">Link Sitio Publicado</a>
+        <a href="https://github.com/rdereimer/misgustos/commits/main/?since=2025-08-13&until=2025-08-15
+        "> Link Commits</a>
+    </main>
     <aside></aside>
     <footer></footer>
 </body>
