Actualización, agregdado de la primer practica al index principal

--- a/aLe.php27/index.html
+++ b/aLe.php27/index.html
@@ -7,9 +7,25 @@
 </head>
 <body>
     <header>
-        <h2>Evidencias Fundamentos de Desarrollo Web</h2>
+        <h2>Evidencias Fundamentos de Desarrollo Web - Alejandro Santiago Coronado</h2>
     </header>
-    <main></main>
+    <main>
+        <main>
+        <h2>Evidencia 1</h2>
+        <article>
+            <header>
+                <h3>Practica 1 - 13/08/2025 al 15/08/2025</h3>
+            </header>
+            <p>Para la practica 1 desarrolle una pagina web sencilla con tematica de 4 pasatiempos mios, estuve contando con la estructura base, header, main, footer. Además de utilizar etiquetas como article, section para separar cada pasatiempo. Todo fue subido a un repositorio personal alojado en GitHub, además se subio a la internet por medio de GitHub y también se tomaron en cuenta las fechas de los commit, teniendo que quedar en un rango del 13/08/2025 al 15/08/2025.</p>
+            <section>
+                <ul>
+                <li><a href="https://github.com/myAle27admin/Ev1Prac1_ASC.git">REPOSITORIO</a></li>
+                <li><a href="https://myale27admin.github.io/Ev1Prac1_ASC/">SITIO PUBLICADO</a></li>
+                <li><a href="https://github.com/myAle27admin/Ev1Prac1_ASC/commits/main?since=2025-08-13&until=2025-08-15">COMMITS DEL 13/08/2025 AL 15/08/2025</a></li>
+                </ul>
+            </section>
+        </article>
+    </main>
     <aside></aside>
     <footer></footer>
 </body>
