Se subió la primera práctica

--- a/ErickLTI/index.html
+++ b/ErickLTI/index.html
@@ -9,8 +9,40 @@
     <header>
         <h1>Evidencias fundamentos de desarrollo web</h1>
     </header>
-    <main></main>
+    <main>
+        <h2>Links</h2>
+        <article>
+            <section>
+                <header>
+                    <h3>A continuación, se presentarán los links, mismos que solicitó el maestro en la primera práctica.</h3>
+                </header>
+                <!-- Desarrollo -->
+                 <li>
+                    <a href="https://ericklti.github.io/tarea1/">Página web</a>
+                 </li>
+
+                 <li>
+                    <a href="https://github.com/ErickLTI/tarea1">Repositorio</a>
+                 </li>
+
+                 <li>
+                    <a href="https://github.com/ErickLTI/tarea1/commits/main/?since=2025-08-13&until=2025-08-15">Commits</a>
+                 </li>
+
+                <footer>
+                    <p>Práctica realizada entre 13 y 15 de Agosto del año 2025</p>
+                </footer>
+            </section>
+
+
+
+        </article>
+    </main>
     <aside></aside>
-    <footer></footer>
+    <footer>
+        <address>
+            <p>Desarrollado por EYMC.</p>
+        </address>
+    </footer>
 </body>
 </html>
