Se subió la primera práctica

--- a/atchz/index.html
+++ b/atchz/index.html
@@ -9,8 +9,54 @@
     <header>
       <h1>Evidencias Fundamentos de desarrollo web</h1>
     </header>
-    <main></main>
+    <main>
+      <article>
+        <header>
+          <h2>Links</h2>
+        </header>
+
+        <section>
+          <header>
+            <h3>Practica 1</h3>
+          </header>
+
+          <p>Pagina web sobre nuestros pasatiempos</p>
+          <ul>
+            <li>
+              <a href="https://github.com/atchz/Practica-1" target="_blank"
+                >Link del repositorio</a
+              >
+            </li>
+            <li>
+              <a href="https://atchz.github.io/Practica-1/" target="_blank"
+                >Link de la Página</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://github.com/atchz/Practica-1/commits/main/?since=2025-08-13&until=2025-08-15"
+                target="_blank"
+                >Link de los commits</a
+              >
+            </li>
+          </ul>
+
+          <footer>
+            <p>Realizado entre el 13 al 15 de Agosto del año 2025</p>
+          </footer>
+        </section>
+
+        <footer>
+          <p>Desarrollado por Juan Antonio</p>
+        </footer>
+      </article>
+    </main>
     <aside></aside>
-    <footer></footer>
+    <footer>
+      <address>
+        <p>UANL</p>
+        <p>FACPYA</p>
+      </address>
+    </footer>
   </body>
 </html>
