--- a/liigabriel/index.html
+++ b/liigabriel/index.html
@@ -9,7 +9,9 @@
     <header>
         <h1>Evidencias Fundamentos de desarrollo web</h1>
     </header>
-    <main></main>
+    <main>
+        
+    </main>
     <aside></aside>
     <footer></footer>
 </body>
