--- a/ernesgarcia06/index.html
+++ b/ernesgarcia06/index.html
@@ -3,13 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LUIS GUZMAN</title>
 </head>
 <body>
     <header>
         <h1>Evidencias Fundamentos de Desarrollo Web</h1>
     </header>
-    <main></main>
+    <main>
+        <h2>Evidencia 1</h2>
+        <p>En esta evidencia 1 realice una presentación en donde hablo un poco sobre mi y mis pasatiempos</p>
+        <p>Realizado entre el 13 y 15 de agosto del 2025</p>
+        <nav>
+            <ul>
+                <li><a href="https://ernesgarcia06.github.io/Evidencia-1/" target="_blank">Link pagina</a></li>
+                <li><a href="https://github.com/ernesgarcia06/Evidencia-1.git" target="_blank">Link Repositorio</a></li>
+                <li><a href="https://github.com/ernesgarcia06/Evidencia-1/commits/main/?since=2025-08-13&until=2025-08-15" target="_blank">Link Commits</a></li>
+            </ul>
+        </nav>
+    </main>
     <aside></aside>
     <footer></footer>
 </body>
