se subio la practica 1

--- a/gfuelinme/index.html
+++ b/gfuelinme/index.html
@@ -9,8 +9,30 @@
     <header>
         <h1>Evidencias Fundamentos de Desarrollo Web</h1>
     </header>
-    <main></main>
+    <main>
+        <article>
+            <header>
+            <h2>Practicas</h2>
+            </header>
+            <section>
+                <h3>Practica 1</h3>
+                <p>En esta practica hicimos uso de etiquetas basicas de HTML para crear una pagina web estatica sobre nuestros pasatiempos.</p>
+                <ul>
+                    <li>
+                        <a href="https://gfuelinme.github.io/practica-1/" target="_blank">Sitio Web</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/gfuelinme/practica-1" target="_blank">Repositorio</a>
+                    </li>
+                    <li><a href="https://github.com/gfuelinme/practica-1/commits/main/?since=2025-08-13&until=2025-08-15" target="_blank">Commits</a>
+                    </li>
+                </ul>
+                <p>Realizado el 15 de Agosto del 2025</p>
+            </section>
+        </article>
+    </main>
     <aside></aside>
     <footer></footer>
+
 </body>
 </html>
