se adjuntaron los enlaces de la practica 1

--- a/Hugo-0699/index.html
+++ b/Hugo-0699/index.html
@@ -6,9 +6,37 @@
     <title>Evidencias</title>
 </head>
 <body>
-    <header>Evidencias de aprendizaje</header>
-    <main></main>
+    <header>
+        <h1>Fundamentos del Desarrollo Web: Evidencias de aprendizaje</h1>
+    </header>
+    <main>
+        <article>
+            <section>
+                <header>
+                    <hr>
+                    <h2>Practica 1</h2>
+                    <hr>
+                </header>
+                <p>Se creo un documento HTML en el que se elaboró un artículo acerca de "mis pasatiempos" haciendo uso de las etiquetas básicas vistas en la clase.</p>
+                <nav>
+                    <h3>Enlaces de GitHub</h3>
+                    <ul>
+                        <li><a href="https://github.com/Hugo-0699/Practica-1.git">Repositorio de GitHub</a></li>
+                        <li><a href="https://hugo-0699.github.io/Practica-1/">Sitio publicado</a></li>
+                        <li><a href="https://github.com/Hugo-0699/Practica-1/commits/main/?since=2025-08-13&until=2025-08-15">Commits del repositorio</a></li>
+                    </ul>
+                    <hr>
+                </nav>
+            </section>
+        </article>
+    </main>
     <aside></aside>
-    <footer></footer>
+    <footer>
+        <address>
+            <p>Desarrollado por el alumno: Hugo Alejandro Zapata Rosales</p>
+            <p>Matricula: 2088379</p>
+            <p>Grupo: 52</p>
+        </address>
+    </footer>
 </body>
 </html>
