--- a/diegoalgosa/index.html
+++ b/diegoalgosa/index.html
@@ -7,9 +7,18 @@
 </head>
 <body>
     <header>
-        <h1>Evidencias fundamentos de desarrollo</h1>
+        <h1>Evidencias desarrollo web</h1>
     </header>
-    <main></main>
+    <main>
+          <main>
+        <h1>Practica 1</h1>
+         <ul>
+                <li><a href="https://github.com/Diegoalgosa/demo">Repositorio de Github</a></li>
+                <li><a href="https://github.com/Diegoalgosa/demo/commits/main/">Commits</a></li>
+                <li><a href="https://diegoalgosa.github.io/demo/">Sitio Públicado</a></li>
+            </ul>
+    </main>
+    </main>
     <aside></aside>
     <footer></footer>
 </body>
