--- a/jesuscruz125/index.html
+++ b/jesuscruz125/index.html
@@ -11,9 +11,29 @@
     </header>
     <main>
 
+        <h2>Practica número 1</h2>
+        <ul>
+            <li><a href="https://github.com/jesuscruz125/Ev1P1">Enlace al repositorio</a></li>
+            <li><a href="https://github.com/jesuscruz125/Ev1P1/commits/main/">Enlace de los commits</a></li>
+            <li><a href="https://jesuscruz125.github.io/Ev1P1/">Enlace a la página</a></li>
+        </ul>
+
+        <h2>Descripción</h3>
+        <p>En la practica número 1 se creo una página web donde explicaremos algunos de nuestros pasatiempos. En mi caso fueron 5 pasatiempos</p>
+        <ul>
+            <li>Deportes</li>
+            <li>Música</li>
+            <li>Series</li>
+            <li>Libros</li>
+            <li>Tecnología y computación</li>
+        </ul>
+        
+        <h2>Fecha de commits</h2>
+        <p>13 al 15 de agosto</p>
+
     </main>
     <aside>
-        
+
     </aside>
     <footer></footer>
 </body>
