--- a/ianstiglitz/index.html
+++ b/ianstiglitz/index.html
@@ -8,6 +8,9 @@
 <body>
     <header>
         <h1>Evidencias Fundamentos de desarrollo web</h1>
+        <h2>Práctica 1: Pasatiempos Treviño</h2>
+        <p>Se debe realizar un solo documento html donde se integre información sobre sus pasatiempos. Utilizar las etiquetas: meta, title, header, main,footer, article, section, img y p. Aplicar estilos sencillos como color de texto, fondo y borde. Para los estilos utilizar un archivo externo css. Se necesita que realice 1 commit por cada tema que desarrolle.</p>
+        <p>A continuacion se muestra los links acordados: </p>
         <ul>        
             <li><a href="https://ianstiglitz.github.io/Practica1_PasatiemposTrevi-o/">Página Github.io</a></li>
             <li><a href="https://github.com/IanStiglitz/Practica1_PasatiemposTrevi-o">Página del repositorio</a></li>
