--- a/jesuscruz125/index.html
+++ b/jesuscruz125/index.html
@@ -19,7 +19,7 @@
         </ul>
 
         <h2>Descripción</h3>
-        <p>En la practica número 1 se creo una página web donde explicaremos algunos de nuestros pasatiempos. En mi caso fueron 5 pasatiempos</p>
+        <p>En la practica número 1 se creo una página web donde explicaremos algunos de nuestros pasatiempos. En mi caso fueron 5 pasatiempos.</p>
         <ul>
             <li>Deportes</li>
             <li>Música</li>
