--- a/oswtobias06/index.html
+++ b/oswtobias06/index.html
@@ -9,7 +9,16 @@
     <header>
         <h1>Evidencias Fundamentos de desarrollo web</h1>
     </header>
-    <main></main>
+    <main>
+        <h2>Practica 1 - Evidencia 1</h2>
+        <p>En la practica 1 de la evidencia 1, hicimos una sencilla pagina web donde platicamos sobre nuestros pasatiempos favoritos.</p>
+        <h3>Links - Fechas del 13 a 15 de agosto</h3>
+        <li>Repositorio: <a href="https://github.com/oswtobias06/EV1practica1/" target="_blank">https://github.com/oswtobias06/EV1practica1/
+</a></li>
+        <li>Sito publicado: <a href="https://oswtobias06.github.io/EV1practica1/" target="_blank">https://oswtobias06.github.io/EV1practica1/
+</a></li>
+        <li>Commits: <a href="https://github.com/oswtobias06/EV1practica1/commits/main/?since=2025-08-13&until=2025-08-15" target="_blank">https://github.com/oswtobias06/EV1practica1/commits/main/?since=2025-08-13&until=2025-08-15
+    </main>
     <aside></aside>
     <footer></footer>
 </body>
