Links de practica 1

--- a/CarlosPortalesM/index.html
+++ b/CarlosPortalesM/index.html
@@ -10,13 +10,18 @@
         <h1>Evidencias Fundamentos de Desarrollo Web</h1>
     </header>
     <main>
-
+        <h2>Práctica 1 - Links</h2>
+        <p>Primero mostraré mi repositorion en donde esta mi práctica 1</p>
+        <li>Repositorio: <a href="https://github.com/CarlosPortalesM/WebPage" target="_blank">Link de repositorio</a></li>
+        <p>Después el link de mi página publicada desde GitHub Pages, en donde hablé sobre mis pasatiempos usando las etiquetas vistas en clase</p>
+        <li>Página: <a href="https://carlosportalesm.github.io/WebPage/" target="_blank">Link de la página</a></li>
+        <p>Por ultimo el link de mis commits de la fecha del 13 al 15 de agosto</p>
+        <li>Commits: <a href="https://github.com/CarlosPortalesM/WebPage/commits/main/?since=2025-08-13&until=2025-08-15" target="_blank">Link de mis commits</a></li>
     </main>
     <aside>
 
     </aside>
     <footer>
-
     </footer>
 </body>
 </html>
