--- a/Marikve7/index.html
+++ b/Marikve7/index.html
@@ -9,7 +9,15 @@
     <header>
         <h1>Evidencias Fundamentos de desarrollo web</h1>
     </header>
-    <main></main>
+    <main>
+        <h2>Practica 1</h2>
+        <p>Practica 1 de EV1 - Se creó una página web sencilla sobre mis pasatimepos.</p>
+        <ul>
+            <li><a href="https://github.com/Marikve7/Practica-1-EV1">Repositorio de Github</a></li>
+            <li><a href="https://github.com/Marikve7/Practica-1-EV1/commits/main/">Link de commits</a></li>
+            <li><a href="https://marikve7.github.io/Practica-1-EV1/">Página web publicada</a></li>
+        </ul>
+    </main>
     <aside></aside>
     <footer></footer>
 </body>
