Se agrega descripcion a la página

--- a/MiguelABanda/index.html
+++ b/MiguelABanda/index.html
@@ -10,14 +10,24 @@
         <h1>Evidencias Fundamentos de Desarrollo Web</h1>
     </header>
     <main>
-          <main>
         <h1>Practica 1</h1>
-         <ul>
+        <p>Se debe realizar un solo documento html donde se integre información sobre los pasatiempos del alumno</p>
+
+        <p>Yo relice un commit por: </p>
+         <ol>
+             <li>Apartado de quien soy yo y la hoja de estilos (1commit)</li>
+             <li>Marco a los articulos (1 commit)</li>
+             <li>Pasatiempo Futbol (1 commit)</li>
+             <li>Pasatiempo Videojuegos (1 commit)</li>
+             <li>Pasatiempo Dormir (1 commit)</li>
+        </ol>
+        <h2>Link</h2>
+        <ul>
                 <li><a href="https://github.com/MiguelABanda/Pratica1_Pasatiempos_MiguelBanda">Repositorio de Github</a></li>
                 <li><a href="https://github.com/MiguelABanda/Pratica1_Pasatiempos_MiguelBanda/commits/main/">Links de los Commit</a></li>
                 <li><a href="https://miguelabanda.github.io/Pratica1_Pasatiempos_MiguelBanda/">Sitio Públicado</a></li>
-            </ul>
-    </main>
+        </ul>
+    
     </main>
     <aside></aside>
     <footer></footer>
