--- a/NerickRamirez/index.html
+++ b/NerickRamirez/index.html
@@ -9,7 +9,19 @@
     <header>
         <h1>Evidencias Fundamentos de Desarrollo Web</h1>
     </header>
-    <main></main>
+    <main>
+        <h1>Practica 1</h1>
+        <p>
+            En esta primer practica se realizo una pagina en donde escribimos algunos de nuestros pasatiempos.
+        </p>
+        <ul>
+            <li><a href="https://github.com/NerickRamirez/Practica1">Repositorio de GitHub</a></li>
+            <li><a href="https://github.com/NerickRamirez/Practica1/commits/main/">Commits</a></li>
+            <li><a href="https://nerickramirez.github.io/Practica1/">Sitio Web</a></li>
+        </ul>
+        <h2>Fechas</h2>
+        <p>Del 14 al 15 de agosto del 2025</p>
+    </main>
     <aside></aside>
     <footer></footer>
 </body>
