--- a/Bere-ops/index.html
+++ b/Bere-ops/index.html
@@ -9,7 +9,17 @@
     <header>
         <h1>Evidencias Fundamentos de desarrollo web</h1>
     </header>
-    <main></main>
+    <main>
+        <h1>Práctica 2</h1>
+        <p>En esta práctica pusimos en prueba los conocimientos vistos en la clase del 18-08, de acuerdo a la Evidencia 1.</p>
+        <ul>
+            <li><a href="https://github.com/Bere-ops/Practica_1.git">Repositorio de GitHub</a></li>
+            <li><a href="https://github.com/Bere-ops/Practica_1/commits/main/">Commits realizados</a></li>
+            <li><a href="https://bere-ops.github.io/Practica_1/">Página web</a></li>
+        </ul>
+        <h2> Fechas </h2>
+        <p>Del 14 al 15 de agosto</p>
+    </main>
     <aside></aside>
     <footer></footer>
 </body>
