--- a/victoriabalderas/index.html
+++ b/victoriabalderas/index.html
@@ -6,7 +6,10 @@
     <title>Evidencias</title>
 </head>
 <body>
-    <header>Evidencias Fundamentos de desarrollo web</header>
+    <header>
+        <h1>Evidencias Fundamentos de desarrollo web</h1>
+    </header>
+    
     <main>
         <h2>PRACTICA 1</h2>
         <p>Página web sencilla acerca de mis pasatiempos y gustos. Practica realizada del 13 al 15 de agosto </p>
@@ -20,3 +23,4 @@
     <footer></footer>
 </body>
 </html>
+ 
