--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <li id="a42"><a href="#">VAZQUEZ BERNAL ERICK ADRIAN </a></li>
           <li id="a43"><a href="#">YAÑEZ LERMA JASHIA ESDREY </a></li>
           <li id="a44"><a href="#">ZAPATA ROSALES HUGO ALEJANDRO </a></li>
-          <li id="a44"><a href="#">JUAN GABRIEL LOPEZ SOLORZANO </a></li>
+          <li id="a44"><a href="#">liigabriel</a></li>
         </ul>
       </nav>
     </main>
