Cambios página de evidencias

--- a/FerminEstrada52/index.html
+++ b/FerminEstrada52/index.html
@@ -3,58 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Práctica 2</title>
 </head>
 <body>
-    <!-- (header>nav)+main+aside+footer -->
-    <header>
-        <h2>Header</h2>
-        <ul>
-            <li><a href="https://youtube.com" target="_blank">Youtube</a></li>
-            <li><a href="tel:+521234567890">Llámanos</a></li>
-            <li><a href="mailto:ferminestradav@gmail.com">Correo</a></li>
-            <li><a href="#abajo">Ir abajo</a></li>
-        </ul>
-        <nav>
-            <h2>Nav</h2>
-        </nav>
-    </header>
-    <main>
-        <h2>Main</h2>
-        <p><abbr title="Sistema de información transaccional">SIT</abbr>. <br> <b>Bold,</b>
-        <i>italic,</i> <mark>highlight,</mark> <strong>strong</strong> & <cite>cite</cite>.</p>
-        <div>
-            <h3>Soy un div</h3>
-        </div>
-    </main>
-
-    <figure>
-        <img src="" alt="">
-        <figcaption>Imagen ejemplo</figcaption>
-    </figure>
-
-    <pre>
-        def function(x):
-            return x+2
-    </pre>
-
-    <img src="Captura de pantalla 2025-08-18 075527.png" alt="Code">
-    <hr>
-    <blockquote cite="www.codecademy.com/courses/learn-html/lessons/intro-to-html/exercises/intro">
-        Cita según aeiou
-    </blockquote>
-    <ol>
-        <li>Introducción a la programación</li>
-        <li>Programación avanzada</li>
-    </ol>
-    <dl>
-        <dt>IA</dt>
-        <dd>Según xyz</dd>
-        <dd>Según abd</dd>
-        <dt>Ciencias computacionales</dt>
-        <dd>Según 123</dd>
-    </dl>
-    <aside><h2>Aside</h2></aside>
-    <footer id="abajo"><h2>Footer</h2></footer>
+    <h1>Evidencias - Fermín Isaí Estrada Vera</h1>
+    <h2>Práctica 1</h2>
+        <h3>Descripción</h3>
+            <p>Sitio web sobre intereses personales.</p>
+        <h3>Links</h3>
+            <li><a href="">Repositorio</a></li>
+            <li><a href="">Sitio</a></li>
+            <li><a href="">Commits</a></li>
 </body>
 </html>
