--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <li id="a01"><a href="#">AGUILAR LINARES ABDIEL RAFAEL </a></li>
           <li id="a02"><a href="#">AYALA LOPEZ CARLOS ALEJANDRO </a></li>
           <li id="a03"><a href="#">BALDERAS GUEVARA VICTORIA ABIGAIL </a></li>
-          <li id="a04"><a href="#">BANDA OBREGON MIGUEL ANGEL </a></li>
+          <li id="a04"><a href="#">MiguelABanda </a></li>
           <li id="a05"><a href="#">CASTAÑO SALAZAR CAROLINA </a></li>
           <li id="a06"><a href="#">CASTRO CAMARILLO JORGE EDUARDO </a></li>
           <li id="a07"><a href="#">CERDA CHAVEZ JUAN ANTONIO </a></li>
