--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
           <li id="a35"><a href="#">SANTIAGO CORONADO ALEJANDRO </a></li>
           <li id="a36"><a href="#">SOLIS SANTIAGO MAYRIN BERENICE </a></li>
           <li id="a37"><a href="#">TOBIAS TORRES OSWALDO ISAI </a></li>
-          <li id="a38"><a href="#">TREVIÑO RINCON IAN </a></li>
+          <li id="a38"><a href="">IanStiglitz</a></li>
           <li id="a39"><a href="#">TREVIÑO SUAREZ LUCA RAMON </a></li>
           <li id="a40"><a href="#">VALERIO AGUIRRE GISELLE NAHOMI </a></li>
           <li id="a41"><a href="#">VALLEJO MALDONADO DANIEL ARTURO </a></li>
           <li id="a42"><a href="#">VAZQUEZ BERNAL ERICK ADRIAN </a></li>
           <li id="a43"><a href="#">YAÑEZ LERMA JASHIA ESDREY </a></li>
-          <li id="a44"><a href="#">ZAPATA ROSALES HUGO ALEJANDRO 77 </a></li>
-          <li id="a44"><a href="#">liigabriel hola</a></li>
+          <li id="a44"><a href="#">ZAPATA ROSALES HUGO ALEJANDRO </a></li>
+          <li id="a44"><a href="#">JUAN GABRIEL LOPEZ SOLORZANO </a></li>
         </ul>
       </nav>
     </main>
