--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <li id="a06"><a href="#">CASTRO CAMARILLO JORGE EDUARDO </a></li>
           <li id="a07"><a href="#">CERDA CHAVEZ JUAN ANTONIO </a></li>
           <li id="a08"><a href="#">CORTES CAMARILLO RICARDO </a></li>
-          <li id="a09"><a href="#">DE LA CRUZ SUSTAITA JESUS EDUARDO </a></li>
+          <li id="a09"><a href="https://github.com/jesuscruz125">jesuscruz125 </a></li>
           <li id="a10"><a href="#">ESCALANTE COLUNGA JAFET EDUARDO </a></li>
           <li id="a11"><a href="#">ESTRADA VERA FERMIN ISAI </a></li>
           <li id="a12"><a href="#">GASPAR IBARRA BERNARDO </a></li>
