--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <li id="a04"><a href="#">BANDA OBREGON MIGUEL ANGEL </a></li>
           <li id="a05"><a href="#">CASTAÑO SALAZAR CAROLINA </a></li>
           <li id="a06"><a href="#">CASTRO CAMARILLO JORGE EDUARDO </a></li>
-          <li id="a07"><a href="#">CERDA CHAVEZ JUAN ANTONIO </a></li>
+          <li id="a07"><a href="#">atchz </a></li>
           <li id="a08"><a href="#">CORTES CAMARILLO RICARDO </a></li>
           <li id="a09"><a href="#">DE LA CRUZ SUSTAITA JESUS EDUARDO </a></li>
           <li id="a10"><a href="#">ESCALANTE COLUNGA JAFET EDUARDO </a></li>
