--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <li id="a35"><a href="#">SANTIAGO CORONADO ALEJANDRO </a></li>
           <li id="a36"><a href="#">SOLIS SANTIAGO MAYRIN BERENICE </a></li>
           <li id="a37"><a href="#">TOBIAS TORRES OSWALDO ISAI </a></li>
-          <li id="a38"><a href="">IanStiglitz</a></li>
+          <li id="a38"><a href="ianstiglitz/index.html">IanStiglitz</a></li>
           <li id="a39"><a href="#">TREVIÑO SUAREZ LUCA RAMON </a></li>
           <li id="a40"><a href="#">VALERIO AGUIRRE GISELLE NAHOMI </a></li>
           <li id="a41"><a href="#">VALLEJO MALDONADO DANIEL ARTURO </a></li>
