--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <li id="a34"><a href="#">SALAZAR MARES JORGE IGNACIO </a></li>
           <li id="a35"><a href="#">SANTIAGO CORONADO ALEJANDRO </a></li>
           <li id="a36"><a href="#">SOLIS SANTIAGO MAYRIN BERENICE </a></li>
-          <li id="a37"><a href="#">TOBIAS TORRES OSWALDO ISAI </a></li>
+          <li id="a37"><a href="#">oswtobias06 </a></li>
           <li id="a38"><a href="#">TREVIÑO RINCON IAN </a></li>
           <li id="a39"><a href="#">TREVIÑO SUAREZ LUCA RAMON </a></li>
           <li id="a40"><a href="#">VALERIO AGUIRRE GISELLE NAHOMI </a></li>
