--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <li id="a28"><a href="#">PORTALES MARRUFO CARLOS </a></li>
           <li id="a29"><a href="#">RAMIREZ ESCOBEDO JESUS ALEJANDRO </a></li>
           <li id="a30"><a href="#">RAMIREZ SALDAÑA NERICK ALBERTO </a></li>
-          <li id="a31"><a href="#">REYES LARA JESUS ALBERTO </a></li>
+          <li id="a31"><a href="#">Bejesusrey </a></li>
           <li id="a32"><a href="#">RIOS VEGA BRAIAN DE JESUS </a></li>
           <li id="a33"><a href="#">RODRIGUEZ ROSAS AARON </a></li>
           <li id="a34"><a href="#">SALAZAR MARES JORGE IGNACIO </a></li>
