--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <li id="a25"><a href="#">MOLINA RAMIREZ FERNANDO NICOLAS </a></li>
           <li id="a26"><a href="#">MONTEMAYOR ALEMAN EDUARDO EMILIANO </a></li>
           <li id="a27"><a href="#">OJEDA HERNANDEZ ILSE GUADALUPE </a></li>
-          <li id="a28"><a href="#">CarlosPortalesM </a></li>
+          <li id="a28"><a href="https://github.com/CarlosPortalesM">CarlosPortalesM </a></li>
           <li id="a29"><a href="#">RAMIREZ ESCOBEDO JESUS ALEJANDRO </a></li>
           <li id="a30"><a href="#">RAMIREZ SALDAÑA NERICK ALBERTO </a></li>
           <li id="a31"><a href="#">REYES LARA JESUS ALBERTO </a></li>
