--- a/TheRafaMan06/index.html
+++ b/TheRafaMan06/index.html
@@ -18,9 +18,9 @@
 
             <p>Vas a crear desde cero una página web personal (también llamada "landing page") donde serás tú el protagonista. El contenido girará en torno a tus pasatiempos o hobbies, lo que le dará un toque personal y único.</p>
 
-            <button onclick="window.open('https://github.com/TheRafaMan06/TheRafaMan06.github.io', '_blank')">Repositorio </button>
-            <button onclick="window.open('https://therafaman06.github.io', '_blank')">Repositorio </button>
-            <button onclick="window.open('https://github.com/TheRafaMan06/TheRafaMan06.github.io/commits?since=2025-08-13&until=2025-08-15', '_blank')">Repositorio </button>
+            <button class="boton outline" onclick="window.open('https://github.com/TheRafaMan06/TheRafaMan06.github.io', '_blank')">Repositorio </button>
+            <button class="boton outline" onclick="window.open('https://therafaman06.github.io', '_blank')">Sitio Publicado </button>
+            <button class="boton outline" onclick="window.open('https://github.com/TheRafaMan06/TheRafaMan06.github.io/commits?since=2025-08-13&until=2025-08-15', '_blank')">Commits </button>
         </div>
     </main>
     <footer></footer>
