--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
           <li id="a41"><a href="#">VALLEJO MALDONADO DANIEL ARTURO </a></li>
           <li id="a42"><a href="#">VAZQUEZ BERNAL ERICK ADRIAN </a></li>
           <li id="a43"><a href="#">YAÑEZ LERMA JASHIA ESDREY </a></li>
-          <li id="a44"><a href="#">ZAPATA ROSALES HUGO ALEJANDRO </a></li>
-          <li id="a44"><a href="#">JUAN GABRIEL LOPEZ SOLORZANO </a></li>
+          <li id="a44"><a href="#">Hugo-0699 </a></li>
         </ul>
       </nav>
     </main>
