Agregué la carpeta

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <li id="a21"><a href="#">LUNA LOPEZ IVAN ANTONIO </a></li>
           <li id="a22"><a href="#">MARTINEZ GARCIA VALERIA LISSET </a></li>
           <li id="a23"><a href="#">MARTINEZ LOZANO LUIS EMILIANO </a></li>
-          <li id="a24"><a href="#">ErickLTI </a></li>
+          <li id="a24"><a href="/ErickLTI/index.html">ErickLTI </a></li>
           <li id="a25"><a href="#">MOLINA RAMIREZ FERNANDO NICOLAS </a></li>
           <li id="a26"><a href="#">MONTEMAYOR ALEMAN EDUARDO EMILIANO </a></li>
           <li id="a27"><a href="#">OJEDA HERNANDEZ ILSE GUADALUPE </a></li>
