--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li id="a39"><a href="#">TREVIÑO SUAREZ LUCA RAMON </a></li>
           <li id="a40"><a href="#">VALERIO AGUIRRE GISELLE NAHOMI </a></li>
           <li id="a41"><a href="#">VALLEJO MALDONADO DANIEL ARTURO </a></li>
-          <li id="a42"><a href="#">VAZQUEZ BERNAL ERICK ADRIAN </a></li>
+          <li id="a42"><a href="KingBootleg/index.html">KingBootleg </a></li>
           <li id="a43"><a href="#">YAÑEZ LERMA JASHIA ESDREY </a></li>
           <li id="a44"><a href="#">ZAPATA ROSALES HUGO ALEJANDRO </a></li>
           <li id="a44"><a href="#">JUAN GABRIEL LOPEZ SOLORZANO </a></li>
