--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
           <li id="a04"><a href="#">BANDA OBREGON MIGUEL ANGEL </a></li>
           <li id="a05"><a href="#">CASTAÑO SALAZAR CAROLINA </a></li>
           <li id="a06"><a href="#">CASTRO CAMARILLO JORGE EDUARDO </a></li>
-          <li id="a07"><a href="#">atchz </a></li>
+          <li id="a07"><a href="atchz/index.html">atchz </a></li>
           <li id="a08"><a href="#">CORTES CAMARILLO RICARDO </a></li>
-          <li id="a09"><a href="https://github.com/jesuscruz125">jesuscruz125 </a></li>
+          <li id="a09">
+            <a href="https://github.com/jesuscruz125">jesuscruz125 </a>
+          </li>
           <li id="a10"><a href="#">ESCALANTE COLUNGA JAFET EDUARDO </a></li>
           <li id="a11"><a href="#">ESTRADA VERA FERMIN ISAI </a></li>
           <li id="a12"><a href="#">GASPAR IBARRA BERNARDO </a></li>
