--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li id="a33"><a href="#">RODRIGUEZ ROSAS AARON </a></li>
           <li id="a34"><a href="#">SALAZAR MARES JORGE IGNACIO </a></li>
           <li id="a35"><a href="#">SANTIAGO CORONADO ALEJANDRO </a></li>
-          <li id="a36"><a href="#">SOLIS SANTIAGO MAYRIN BERENICE </a></li>
+          <li id="a36"><a href="#">Bere-ops </a></li>
           <li id="a37"><a href="#">TOBIAS TORRES OSWALDO ISAI </a></li>
           <li id="a38"><a href="#">TREVIÑO RINCON IAN </a></li>
           <li id="a39"><a href="#">TREVIÑO SUAREZ LUCA RAMON </a></li>
