--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
       <nav id="main">
         <ul>
-          <li id="a01"><a href="#">AGUILAR LINARES ABDIEL RAFAEL </a></li>
+          <li id="a01"><a href="TheRafaMan06/index.html">TheRafaMan06 </a></li>
           <li id="a02"><a href="#">AYALA LOPEZ CARLOS ALEJANDRO </a></li>
           <li id="a03"><a href="#">BALDERAS GUEVARA VICTORIA ABIGAIL </a></li>
           <li id="a04"><a href="MiguelABanda/index.html">MiguelABanda </a></li>
