agregue el link a la carpeta

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <li id="a31"><a href="#">REYES LARA JESUS ALBERTO </a></li>
           <li id="a32"><a href="#">RIOS VEGA BRAIAN DE JESUS </a></li>
           <li id="a33"><a href="#">RODRIGUEZ ROSAS AARON </a></li>
-          <li id="a34"><a href="#">gfuelinme</a></li>
+          <li id="a34"><a href="gfuelinme/index.html">gfuelinme</a></li>
           <li id="a35"><a href="#">SANTIAGO CORONADO ALEJANDRO </a></li>
           <li id="a36"><a href="#">SOLIS SANTIAGO MAYRIN BERENICE </a></li>
           <li id="a37"><a href="#">TOBIAS TORRES OSWALDO ISAI </a></li>
