--- a/index.html
+++ b/index.html
@@ -28,11 +28,7 @@
           <li id="a13"><a href="#">GOMEZ GARCIA FERNANDA NOHEMI </a></li>
           <li id="a14"><a href="#">GONZALEZ INFANTE ALAN JAIR </a></li>
           <li id="a15"><a href="#">GONZALEZ SAENZ DIEGO ALBERTO </a></li>
-<<<<<<< HEAD
-          <li id="a16"><a href="#">GUZMAN GARCIA LUIS ERNESTO </a></li>
-=======
           <li id="a16"><a href="ernesgarcia06/index.html">ernesgarcia06 </a></li>
->>>>>>> d8df5b3ea92cd742f36b1412c8366e83062845e6
           <li id="a17"><a href="#">HERNANDEZ SAUCEDA EVELYN MICHEL </a></li>
           <li id="a18"><a href="/Marikve7/index.html">Marikve7</a></li>
           <li id="a19"><a href="#">LEAL GONZALEZ ANDRES </a></li>
@@ -47,7 +43,7 @@
           <li id="a28"><a href="#">CarlosPortalesM </a></li>
           <li id="a29"><a href="#">RAMIREZ ESCOBEDO JESUS ALEJANDRO </a></li>
           <li id="a30"><a href="#">RAMIREZ SALDAÑA NERICK ALBERTO </a></li>
-          <li id="a31"><a href="#">Bejesusrey </a></li>
+          <li id="a31"><a href="Bejesusrey/index.html">Bejesusrey </a></li>
           <li id="a32"><a href="#">RIOS VEGA BRAIAN DE JESUS </a></li>
           <li id="a33"><a href="#">RODRIGUEZ ROSAS AARON </a></li>
           <li id="a34"><a href="gfuelinme/index.html">gfuelinme</a></li>
