--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li id="a12"><a href="#">GASPAR IBARRA BERNARDO </a></li>
           <li id="a13"><a href="#">GOMEZ GARCIA FERNANDA NOHEMI </a></li>
           <li id="a14"><a href="#">GONZALEZ INFANTE ALAN JAIR </a></li>
-          <li id="a15"><a href="#">GONZALEZ SAENZ DIEGO ALBERTO </a></li>
+          <li id="a15"><a href="diegoalgosa/index.html">diegoalgosa </a></li>
           <li id="a16"><a href="#">ernesgarcia06 </a></li>
           <li id="a17"><a href="#">HERNANDEZ SAUCEDA EVELYN MICHEL </a></li>
           <li id="a18"><a href="#">JASSO GARCÍA ILSE MARIANA </a></li>
