--- a/FernandaGomezG/index.html
+++ b/FernandaGomezG/index.html
@@ -10,8 +10,7 @@
         <h1>Evidencias Fundamentos Desarrollo Web </h1>
         <li><a href="https://github.com/FernandaNohemiGomezGarcia/practica1.git">Página1</a></li>
         <li><a href="https://github.com/FernandaNohemiGomezGarcia/practica1/commits/main/?since=2025-08-13&until=2025-08-15">Commits</a></li>
-        <li><a href="">Página publicada</a></li>
+        <li><a href="https://fernandanohemigomezgarcia.github.io/practica1/">Página publicada</a></li>
     </header>
 </body>
-    <h2></h2>
 </html>
