error en publicacion de pagina

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <li id="a30"><a href="#">RAMIREZ SALDAÑA NERICK ALBERTO </a></li>
           <li id="a31"><a href="#">REYES LARA JESUS ALBERTO </a></li>
           <li id="a32"><a href="#">RIOS VEGA BRAIAN DE JESUS </a></li>
-          <li id="a33"><a href="#">RODRIGUEZ ROSAS AARON </a></li>
+          <li id="a33"><a href="#">aaronrdzr </a></li>
           <li id="a34"><a href="#">SALAZAR MARES JORGE IGNACIO </a></li>
           <li id="a35"><a href="#">SANTIAGO CORONADO ALEJANDRO </a></li>
           <li id="a36"><a href="#">SOLIS SANTIAGO MAYRIN BERENICE </a></li>
