Resolvi conflicto en index.html

--- a/index.html
+++ b/index.html
@@ -41,8 +41,12 @@
           <li id="a22"><a href="#">MARTINEZ GARCIA VALERIA LISSET </a></li>
           <li id="a23"><a href="#">MARTINEZ LOZANO LUIS EMILIANO </a></li>
           <li id="a24"><a href="#">ErickLTI </a></li>
+          <li id="a24"><a href="/ErickLTI/index.html">ErickLTI </a></li>
+          <li id="a25"><a href="#">MOLINA RAMIREZ FERNANDO NICOLAS </a></li>
           <li id="a25"><a href="#">MOLINA RAMIREZ FERNANDO NICOLAS </a></li>
           <li id="a26"><a href="#">MONTEMAYOR ALEMAN EDUARDO EMILIANO </a></li>
+          <li id="a26"><a href="EddMont/index.html">xxalemazz </a></li>
+          <li id="a27"><a href="#">OJEDA HERNANDEZ ILSE GUADALUPE </a></li>
           <li id="a27"><a href="#">OJEDA HERNANDEZ ILSE GUADALUPE </a></li>
           <li id="a28"><a href="https://github.com/CarlosPortalesM">CarlosPortalesM </a></li>
           <li id="a24"><a href="/ErickLTI/index.html">ErickLTI </a></li>
@@ -54,21 +58,18 @@
           <li id="a30"><a href="#">RAMIREZ SALDAÑA NERICK ALBERTO </a></li>
           <li id="a31"><a href="Bejesusrey/index.html">Bejesusrey </a></li>
           <li id="a32"><a href="#">RIOS VEGA BRAIAN DE JESUS </a></li>
-<<<<<<< HEAD
+          <li id="a33"><a href="#">RODRIGUEZ ROSAS AARON </a></li>
           <li id="a33"><a href="aaronrdzr/index.html">aaronrdzr </a></li>
           <li id="a34"><a href="#">SALAZAR MARES JORGE IGNACIO </a></li>
-=======
-          <li id="a33"><a href="#">RODRIGUEZ ROSAS AARON </a></li>
+          <li id="a34"><a href="gfuelinme/index.html">gfuelinme</a></li>
           <li id="a34"><a href="#">gfuelinme</a></li>
->>>>>>> ebfa1f81de16b9465f8b9241fbe511ff9fc8cf33
           <li id="a35"><a href="#">SANTIAGO CORONADO ALEJANDRO </a></li>
+          <li id="a35"><a href="#">SANTIAGO CORONADO ALEJANDRO </a></li>
+          <li id="a36"><a href="#">SOLIS SANTIAGO MAYRIN BERENICE </a></li>
           <li id="a36"><a href="#">SOLIS SANTIAGO MAYRIN BERENICE </a></li>
           <li id="a37"><a href="https://github.com/oswtobias06">oswtobias06 </a></li>
-          <li id="a38"><a href="#">TREVIÑO RINCON IAN </a></li>
-          <li id="a34"><a href="gfuelinme/index.html">gfuelinme</a></li>
-          <li id="a35"><a href="#">SANTIAGO CORONADO ALEJANDRO </a></li>
-          <li id="a36"><a href="#">SOLIS SANTIAGO MAYRIN BERENICE </a></li>
           <li id="a37"><a href="oswtobias06/index.html">oswtobias06 </a></li>
+          <li id="a38"><a href="#">TREVIÑO RINCON IAN </a></li>
           <li id="a38"><a href="ianstiglitz/index.html">IanStiglitz</a></li>
           <li id="a39"><a href="#">TREVIÑO SUAREZ LUCA RAMON </a></li>
           <li id="a40"><a href="#">VALERIO AGUIRRE GISELLE NAHOMI </a></li>
