enlace a archivo indexEv.html

--- a/F-rn-ndo/index.html
+++ b/F-rn-ndo/index.html
@@ -27,7 +27,7 @@
         <main>
             <ul class="links">
                 <li><a href="https://github.com/F-rn-ndo/practicaEv1">Repositorio de practicaEv1</a></li>
-                
+                <li><a href="https://github.com/F-rn-ndo/practicaEv1/blob/main/indexEv.html">Archivo HTML</a></li>
             </ul>
         </main>
         <footer>
