enlace a archivo css

--- a/F-rn-ndo/index.html
+++ b/F-rn-ndo/index.html
@@ -28,6 +28,7 @@
             <ul class="links">
                 <li><a href="https://github.com/F-rn-ndo/practicaEv1">Repositorio de practicaEv1</a></li>
                 <li><a href="https://github.com/F-rn-ndo/practicaEv1/blob/main/indexEv.html">Archivo HTML</a></li>
+                <li><a href="https://github.com/F-rn-ndo/practicaEv1/blob/main/estilo.css">Archivo CSS</a></li>
             </ul>
         </main>
         <footer>
