--- a/F-rn-ndo/index.html
+++ b/F-rn-ndo/index.html
@@ -29,6 +29,7 @@
                 <li><a href="https://github.com/F-rn-ndo/practicaEv1">Repositorio de practicaEv1</a></li>
                 <li><a href="https://github.com/F-rn-ndo/practicaEv1/blob/main/indexEv.html">Archivo HTML</a></li>
                 <li><a href="https://github.com/F-rn-ndo/practicaEv1/blob/main/estilo.css">Archivo CSS</a></li>
+                <li><a href="https://github.com/F-rn-ndo/practicaEv1/commits/main/">Commits de la práctica</a></li>
             </ul>
         </main>
         <footer>
