fecha de elaboración de práctica

--- a/F-rn-ndo/index.html
+++ b/F-rn-ndo/index.html
@@ -42,6 +42,8 @@
             <h2> Fechas de elaboración de la práctica</h2>
         </header>
         
+        Míercoles 13 de agosto del 2025
+
         <footer>
 
         </footer>
