--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <li id="a21"><a href="#">LUNA LOPEZ IVAN ANTONIO </a></li>
           <li id="a22"><a href="SunnyWiltshire/index.html">SunnyWiltshire</a></li>
           <li id="a23"><a href="#">MARTINEZ LOZANO LUIS EMILIANO </a></li>
-          <li id="a24"><a href="/ErickLTI/index.html">ErickLTI </a></li>
+          <li id="a24"><a href="ErickLTI/index.html">ErickLTI </a></li>
           <li id="a25"><a href="F-rn-ndo/index.html">F-rn-ndo</a></li>
           <li id="a26"><a href="EddMont/index.html">xxalemazz </a></li>
           <li id="a27"><a href="#">OJEDA HERNANDEZ ILSE GUADALUPE </a></li>
