--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <li id="a27"><a href="#">OJEDA HERNANDEZ ILSE GUADALUPE </a></li>
           <li id="a28"><a href="CarlosPortalesM/index.html">CarlosPortalesM </a></li>
           <li id="a29"><a href="#">RAMIREZ ESCOBEDO JESUS ALEJANDRO </a></li>
-          <li id="a30"><a href="#">RAMIREZ SALDAÑA NERICK ALBERTO </a></li>
+          <li id="a30"><a href="#">NerickRamirez</a></li>
           <li id="a31"><a href="#">Bejesusrey </a></li>
           <li id="a32"><a href="#">RIOS VEGA BRAIAN DE JESUS </a></li>
           <li id="a33"><a href="aaronrdzr/index.html">aaronrdzr </a></li>
