--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <li id="a24"><a href="/ErickLTI/index.html">ErickLTI </a></li>
           <li id="a25"><a href="#">MOLINA RAMIREZ FERNANDO NICOLAS </a></li>
           <li id="a26"><a href="EddMont/index.html">xxalemazz </a></li>
-          <li id="a27"><a href="#">OJEDA HERNANDEZ ILSE GUADALUPE </a></li>
+          <li id="a27"><a href="IlseOjeda/index.html">IlseOjeda</a></li>
           <li id="a28"><a href="/CarlosPortalesM/index.html">CarlosPortalesM </a></li>
           <li id="a29"><a href="AlejandroRmzEsc/index.html" target="_blank">AlejandroRmzEsc </a></li>
           <li id="a30"><a href="#">RAMIREZ SALDAÑA NERICK ALBERTO </a></li>
