--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <li id="a36"><a href="bere-ops/index.html">Bere-ops </a></li>
           <li id="a37"><a href="oswtobias06/index.html">oswtobias06 </a></li>
           <li id="a38"><a href="ianstiglitz/index.html">IanStiglitz</a></li>
-          <li id="a39"><a href="#">TREVIÑO SUAREZ LUCA RAMON </a></li>
+          <li id="a39"><a href="luca384/index.html">luca384 </a></li>
           <li id="a40"><a href="#">VALERIO AGUIRRE GISELLE NAHOMI </a></li>
           <li id="a41"><a href="#">VALLEJO MALDONADO DANIEL ARTURO </a></li>
           <li id="a42"><a href="#">VAZQUEZ BERNAL ERICK ADRIAN </a></li>
