--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li id="a27"><a href="IlseOjeda/index.html">IlseOjeda</a></li>
           <li id="a28"><a href="/CarlosPortalesM/index.html">CarlosPortalesM </a></li>
           <li id="a29"><a href="#">RAMIREZ ESCOBEDO JESUS ALEJANDRO </a></li>
-          <li id="a30"><a href="#">NerickRamirez</a></li>
+          <li id="a30"><a href="NerickRamirez/index.html">NerickRamirez</a></li>
           <li id="a31"><a href="Bejesusrey/index.html">Bejesusrey </a></li>
           <li id="a32"><a href="#">RIOS VEGA BRAIAN DE JESUS </a></li>
           <li id="a33"><a href="aaronrdzr/index.html">aaronrdzr </a></li>
