--- a/index.html
+++ b/index.html
@@ -19,26 +19,22 @@
           <li id="a04"><a href="MiguelABanda/index.html">MiguelABanda </a></li>
           <li id="a05"><a href="#">CASTAÑO SALAZAR CAROLINA </a></li>
           <li id="a06"><a href="#">CASTRO CAMARILLO JORGE EDUARDO </a></li>
-          <li id="a07"><a href="#">CERDA CHAVEZ JUAN ANTONIO </a></li>
+          <li id="a07"><a href="atchz/index.html">atchz </a></li>      
           <li id="a08"><a href="RickyCorCam/index.html">CORTES CAMARILLO RICARDO </a></li>
-          <li id="a09"><a href="#">DE LA CRUZ SUSTAITA JESUS EDUARDO </a></li>
-          <li id="a07"><a href="atchz/index.html">atchz </a></li>
           <li id="a09"><a href="jesuscruz125/index.html">jesuscruz125 </a></li>
           <li id="a10"><a href="#">ESCALANTE COLUNGA JAFET EDUARDO </a></li>
           <li id="a11"><a href="#FerminEstrada52/index.html">fer-ecs </a></li>
           <li id="a12"><a href="#">GASPAR IBARRA BERNARDO </a></li>
           <li id="a13"><a href="#">GOMEZ GARCIA FERNANDA NOHEMI </a></li>
           <li id="a14"><a href="#">GONZALEZ INFANTE ALAN JAIR </a></li>
-          <li id="a15"><a href="diegoalgosa/index.html">diegoalgosa </a></li>
-          <li id="a15"><a href="#">GONZALEZ SAENZ DIEGO ALBERTO </a></li>          
+          <li id="a15"><a href="diegoalgosa/index.html">diegoalgosa </a></li>         
           <li id="a16"><a href="ernesgarcia06/index.html">ernesgarcia06 </a></li>
           <li id="a17"><a href="#">HERNANDEZ SAUCEDA EVELYN MICHEL </a></li>
-          <li id="a18"><a href="#">Marikve7</a></li>
-          <li id="a18"><a href="/Marikve7/index.html">Marikve7</a></li>
+          <li id="a18"><a href="Marikve7/index.html">Marikve7</a></li>
           <li id="a19"><a href="#">LEAL GONZALEZ ANDRES </a></li>
           <li id="a20"><a href="#">LOZANO RAMOS CHRISTIAN LEONARDO </a></li>
           <li id="a21"><a href="#">LUNA LOPEZ IVAN ANTONIO </a></li>
-          <li id="a22"><a href="#">MARTINEZ GARCIA VALERIA LISSET </a></li>
+          <li id="a22"><a href="SunnyWiltshire/index.html">SunnyWiltshire</a></li>
           <li id="a23"><a href="#">MARTINEZ LOZANO LUIS EMILIANO </a></li>
           <li id="a24"><a href="/ErickLTI/index.html">ErickLTI </a></li>
           <li id="a25"><a href="#">MOLINA RAMIREZ FERNANDO NICOLAS </a></li>
@@ -50,15 +46,10 @@
           <li id="a31"><a href="Bejesusrey/index.html">Bejesusrey </a></li>
           <li id="a32"><a href="AscuOnTop\index.html">AscuOnTop </a></li>
           <li id="a33"><a href="aaronrdzr/index.html">aaronrdzr </a></li>
-          <li id="a34"><a href="#">SALAZAR MARES JORGE IGNACIO </a></li>
-          <li id="a35"><a href="#">SANTIAGO CORONADO ALEJANDRO </a></li>
-          <li id="a36"><a href="#">SOLIS SANTIAGO MAYRIN BERENICE </a></li>
-          <li id="a37"><a href="https://github.com/oswtobias06">oswtobias06 </a></li>
-          <li id="a38"><a href="#">TREVIÑO RINCON IAN </a></li>
           <li id="a34"><a href="gfuelinme/index.html">gfuelinme</a></li>
           <li id="a35"><a href="#">SANTIAGO CORONADO ALEJANDRO </a></li>
           <li id="a36"><a href="#">SOLIS SANTIAGO MAYRIN BERENICE </a></li>
-          <li id="a37"><a href="oswtobias06/index.html">oswtobias06 </a></li>
+          <li id="a37"><a href="oswtobias06/index.html">oswtobias06 </a></li>          
           <li id="a38"><a href="ianstiglitz/index.html">IanStiglitz</a></li>
           <li id="a39"><a href="luca384/index.html">luca384 </a></li>
           <li id="a40"><a href="#">VALERIO AGUIRRE GISELLE NAHOMI </a></li>
