--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
           <li id="a26"><a href="EddMont/index.html">xxalemazz </a></li>
           <li id="a27"><a href="IlseOjeda/index.html">IlseOjeda</a></li>
           <li id="a28"><a href="/CarlosPortalesM/index.html">CarlosPortalesM </a></li>
-          <li id="a29"><a href="#">RAMIREZ ESCOBEDO JESUS ALEJANDRO </a></li>
+          <li id="a29"><a href="AlejandroRmzEsc/index.html" target="_blank">AlejandroRmzEsc </a></li>
           <li id="a30"><a href="NerickRamirez/index.html">NerickRamirez</a></li>
           <li id="a31"><a href="Bejesusrey/index.html">Bejesusrey </a></li>
           <li id="a32"><a href="AscuOnTop\index.html">AscuOnTop </a></li>
           <li id="a33"><a href="aaronrdzr/index.html">aaronrdzr </a></li>
           <li id="a34"><a href="gfuelinme/index.html">gfuelinme</a></li>
-          <li id="a35"><a href="#">SANTIAGO CORONADO ALEJANDRO </a></li>
-          <li id="a36"><a href="#">SOLIS SANTIAGO MAYRIN BERENICE </a></li>
+          <li id="a35"><a href="/website52/aLe.php27/index.html">aLe.php27 </a></li>
+          <li id="a36"><a href="bere-ops/index.html">Bere-ops </a></li>
           <li id="a37"><a href="oswtobias06/index.html">oswtobias06 </a></li>          
           <li id="a38"><a href="ianstiglitz/index.html">IanStiglitz</a></li>
           <li id="a39"><a href="luca384/index.html">luca384 </a></li>
@@ -56,7 +56,7 @@
           <li id="a41"><a href="#">VALLEJO MALDONADO DANIEL ARTURO </a></li>
           <li id="a42"><a href="#">VAZQUEZ BERNAL ERICK ADRIAN </a></li>
           <li id="a43"><a href="#">YAÑEZ LERMA JASHIA ESDREY </a></li>
-          <li id="a44"><a href="#">ZAPATA ROSALES HUGO ALEJANDRO </a></li>
+          <li id="a44"><a href="Hugo-0699/index.html">Hugo-0699 </a></li>
           <li id="a44"><a href="#">JUAN GABRIEL LOPEZ SOLORZANO </a></li>
           <li id="a44"><a href="#">Hugo-0699 </a></li>
         </ul>
