Corrección de duplicación por un errror de Merge, FAVOR DE RESPETAR A LOS USUARIOS

--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
           <li id="a04"><a href="MiguelABanda/index.html">MiguelABanda </a></li>
           <li id="a05"><a href="#">CASTAÑO SALAZAR CAROLINA </a></li>
           <li id="a06"><a href="#">CASTRO CAMARILLO JORGE EDUARDO </a></li>
-          <li id="a07"><a href="#">CERDA CHAVEZ JUAN ANTONIO </a></li>
-          <li id="a08"><a href="RickyCorCam/index.html">CORTES CAMARILLO RICARDO </a></li>
-          <li id="a09"><a href="#">DE LA CRUZ SUSTAITA JESUS EDUARDO </a></li>
           <li id="a07"><a href="atchz/index.html">atchz </a></li>
+          <li id="a08"><a href="RickyCorCam/index.html">CORTES CAMARILLO RICARDO </a></li>
           <li id="a09"><a href="jesuscruz125/index.html">jesuscruz125 </a></li>
           <li id="a10"><a href="#">ESCALANTE COLUNGA JAFET EDUARDO </a></li>
           <li id="a11"><a href="#FerminEstrada52/index.html">fer-ecs </a></li>
@@ -30,11 +28,9 @@
           <li id="a13"><a href="#">GOMEZ GARCIA FERNANDA NOHEMI </a></li>
           <li id="a14"><a href="#">GONZALEZ INFANTE ALAN JAIR </a></li>
           <li id="a15"><a href="diegoalgosa/index.html">diegoalgosa </a></li>
-          <li id="a15"><a href="#">GONZALEZ SAENZ DIEGO ALBERTO </a></li>          
           <li id="a16"><a href="ernesgarcia06/index.html">ernesgarcia06 </a></li>
           <li id="a17"><a href="#">HERNANDEZ SAUCEDA EVELYN MICHEL </a></li>
-          <li id="a18"><a href="#">Marikve7</a></li>
-          <li id="a18"><a href="/Marikve7/index.html">Marikve7</a></li>
+          <li id="a18"><a href="Marikve7/index.html">Marikve7</a></li>
           <li id="a19"><a href="#">LEAL GONZALEZ ANDRES </a></li>
           <li id="a20"><a href="#">LOZANO RAMOS CHRISTIAN LEONARDO </a></li>
           <li id="a21"><a href="#">LUNA LOPEZ IVAN ANTONIO </a></li>
@@ -50,14 +46,9 @@
           <li id="a31"><a href="Bejesusrey/index.html">Bejesusrey </a></li>
           <li id="a32"><a href="AscuOnTop\index.html">AscuOnTop </a></li>
           <li id="a33"><a href="aaronrdzr/index.html">aaronrdzr </a></li>
-          <li id="a34"><a href="#">SALAZAR MARES JORGE IGNACIO </a></li>
-          <li id="a35"><a href="#">SANTIAGO CORONADO ALEJANDRO </a></li>
-          <li id="a36"><a href="#">SOLIS SANTIAGO MAYRIN BERENICE </a></li>
-          <li id="a37"><a href="https://github.com/oswtobias06">oswtobias06 </a></li>
-          <li id="a38"><a href="#">TREVIÑO RINCON IAN </a></li>
           <li id="a34"><a href="gfuelinme/index.html">gfuelinme</a></li>
           <li id="a35"><a href="/website52/aLe.php27/index.html">aLe.php27 </a></li>
-          <li id="a36"><a href="bere-ops/index.html">Bere-ops </a></li>
+          <li id="a36"><a href="bere-ops/index.html">Bere-ops </a></li>          
           <li id="a37"><a href="oswtobias06/index.html">oswtobias06 </a></li>          
           <li id="a38"><a href="ianstiglitz/index.html">IanStiglitz</a></li>
           <li id="a39"><a href="luca384/index.html">luca384 </a></li>
